--- a/OneDrive/Documentos/COMPU VISUAL/Proyecto/src/reportes/ReporteXCedula.jrxml
+++ b/OneDrive/Documentos/COMPU VISUAL/Proyecto/src/reportes/ReporteXCedula.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" language="java" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="80f3f048-d538-474d-a148-2d555900b9f4">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="80f3f048-d538-474d-a148-2d555900b9f4">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
@@ -58,12 +58,12 @@
 				</textField>
 			</frame>
 			<image>
-				<reportElement x="453" y="0" width="100" height="132" uuid="ae31d45d-e5d3-4561-8758-d39cad1e5954"/>
-				<imageExpression><![CDATA["C:\\Users\\bl250\\OneDrive\\Documentos\\COMPU VISUAL\\Proyecto\\src\\reportes\\logofisei.jpg"]]></imageExpression>
+				<reportElement x="0" y="1" width="111" height="131" uuid="a31cbc91-85e1-4981-b8d6-fe47ba8c0742"/>
+				<imageExpression><![CDATA["C:\\Users\\ASUS\\OneDrive\\Documentos\\NetBeansProjects\\ProyectoVisual-1\\OneDrive\\Documentos\\COMPU VISUAL\\Proyecto\\src\\reportes\\logouta.jpg"]]></imageExpression>
 			</image>
 			<image>
-				<reportElement x="0" y="0" width="111" height="132" uuid="59c970aa-f2cb-4840-800f-d93ee99efcfb"/>
-				<imageExpression><![CDATA["C:\\Users\\bl250\\OneDrive\\Documentos\\COMPU VISUAL\\Proyecto\\src\\reportes\\logouta.jpg"]]></imageExpression>
+				<reportElement x="453" y="0" width="102" height="131" uuid="f450b68f-d191-4a91-b67a-3628386c9fbe"/>
+				<imageExpression><![CDATA["C:\\Users\\ASUS\\OneDrive\\Documentos\\NetBeansProjects\\ProyectoVisual-1\\OneDrive\\Documentos\\COMPU VISUAL\\Proyecto\\src\\reportes\\logofisei.jpg"]]></imageExpression>
 			</image>
 		</band>
 	</title>
